<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/the_ring"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StrategyGuideActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/wilds_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wilds" />

        <Button
            android:id="@+id/attack_defense_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack_defense" />

        <Button
            android:id="@+id/alliance_assistance_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alliance" />

        <Button
            android:id="@+id/heroes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heroes" />

        <Button
            android:id="@+id/relics_deeds_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relics_deeds" />

        <Button
            android:id="@+id/troops_might_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/might" />

        <Button
            android:id="@+id/buildings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buildings" />

    </LinearLayout>

</ScrollView>