<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/the_ring"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AllianceMenuActivity" >

    <Button
        android:id="@+id/join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_alliance" />

    <Button
        android:id="@+id/request_res_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resource_request" />

    <Button
        android:id="@+id/request_reins_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reins_request" />

</LinearLayout>