<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddEnemyActivity" >

    <LinearLayout
        android:id="@+id/Name2_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/name2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/name2_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Alliance2_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/alliance2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alliance" />

        <EditText
            android:id="@+id/alliance2_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Position2Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/position2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Position" />

        <EditText
            android:id="@+id/position2_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Might2Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/might2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Might" />

        <EditText
            android:id="@+id/might2_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Agression2Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/aggression2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agression_level" />

        <Spinner
            android:id="@+id/agression2_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/City1Layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/city1x2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City1X" />

        <EditText
            android:id="@+id/city1x2_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/city1y2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City1Y" />

        <EditText
            android:id="@+id/city1y2_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/City2Layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/city2x2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City2X" />

        <EditText
            android:id="@+id/city2x2_edittext"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/city2y2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City1Y" />

        <EditText
            android:id="@+id/city2y2_edittext"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/City3Layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/city3x2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City3X" />

        <EditText
            android:id="@+id/city3x2_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/city3y2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City1Y" />

        <EditText
            android:id="@+id/city3y2_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/save2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:text="Save" />

        <Button
            android:id="@+id/cancel2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:text="Cancel" />
    </LinearLayout>

</LinearLayout>