<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" 
  android:layout_width="fill_parent"
   android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/the_ring"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:src="@drawable/hobbit_pic2" />

            <Button
                android:id="@+id/enemy_activity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enemy_coordinates" />

            <TextView
                android:id="@+id/placeholder1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:src="@drawable/hobbit_pic1" />

            <Button
                android:id="@+id/personal_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_shitlist" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/citywall2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/strategy_guide_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Strategy Guide" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <Button
                android:id="@+id/personal_growth_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_growth" />

        </LinearLayout>

    </ScrollView>

 </LinearLayout>